--- a/src/settingsdialog.ui
+++ b/src/settingsdialog.ui
@@ -24,17 +24,13 @@
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="label_font">
-       <property name="frameShape">
-        <enum>QFrame::Panel</enum>
-       </property>
-       <property name="text">
-        <string>&lt;font&gt;</string>
-       </property>
-      </widget>
-     </item>
-     <item>
       <widget class="QPushButton" name="pushButton_selectFont">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>...</string>
        </property>
