--- a/src/aboutdialog.ui
+++ b/src/aboutdialog.ui
@@ -20,7 +20,14 @@
    <item>
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Gede Johan Henriksson Copyright 2014</string>
+      <string>Gede is written by Johan Henriksson</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Copyright (C) 2014</string>
      </property>
     </widget>
    </item>
