Not all variable widget columns are editable

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -90,6 +90,9 @@
           <height>1</height>
          </size>
         </property>
+        <property name="editTriggers">
+         <set>QAbstractItemView::NoEditTriggers</set>
+        </property>
         <property name="selectionMode">
          <enum>QAbstractItemView::ExtendedSelection</enum>
         </property>
