--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -71,6 +71,9 @@
         <enum>Qt::Vertical</enum>
        </property>
        <widget class="QTreeWidget" name="autoWidget">
+        <property name="editTriggers">
+         <set>QAbstractItemView::NoEditTriggers</set>
+        </property>
         <column>
          <property name="text">
           <string notr="true">1</string>
