--- a/src/memorydialog.ui
+++ b/src/memorydialog.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>MemoryDialog</class>
  <widget class="QDialog" name="MemoryDialog">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -12,6 +15,9 @@
   </property>
   <property name="windowTitle">
    <string>Memory</string>
+  </property>
+  <property name="modal">
+   <bool>true</bool>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -30,6 +36,9 @@
       <widget class="QPushButton" name="pushButton_update">
        <property name="text">
         <string>Update</string>
+       </property>
+       <property name="default">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
