added 'initial breakpoint func' in opendialog

--- a/src/opendialog.ui
+++ b/src/opendialog.ui
@@ -161,6 +161,20 @@
         </widget>
        </item>
        <item>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QLabel" name="label_7">
+           <property name="text">
+            <string>Initial breakpoint at function:</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="lineEdit_initialBreakpoint"/>
+         </item>
+        </layout>
+       </item>
+       <item>
         <widget class="QCheckBox" name="checkBox_reloadBreakpoints">
          <property name="text">
           <string>Use breakpoints from last run</string>
