--- a/src/opendialog.ui
+++ b/src/opendialog.ui
@@ -151,6 +151,13 @@
            </property>
           </widget>
          </item>
+         <item row="3" column="0">
+          <widget class="QCheckBox" name="checkBox_download">
+           <property name="text">
+            <string>Download</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
        <item>
