Added support for changing 'Current Line' color.

--- a/src/settingsdialog.ui
+++ b/src/settingsdialog.ui
@@ -424,6 +424,20 @@ QGroupBox::title {
            </property>
           </widget>
          </item>
+         <item row="8" column="0">
+          <widget class="QLabel" name="label_17">
+           <property name="text">
+            <string>Current line</string>
+           </property>
+          </widget>
+         </item>
+         <item row="8" column="1">
+          <widget class="MColorButton" name="pushButton_clr_curLine">
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
       </layout>
