--- a/src/settingsdialog.ui
+++ b/src/settingsdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>365</width>
-    <height>413</height>
+    <width>366</width>
+    <height>441</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -241,6 +241,13 @@ QGroupBox::title {
           <widget class="QSpinBox" name="spinBox_tabIndent"/>
          </item>
         </layout>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="checkBox_showLineNo">
+         <property name="text">
+          <string>Show linenumbers</string>
+         </property>
+        </widget>
        </item>
        <item>
         <widget class="QGroupBox" name="groupBox">
