--- a/src/codeviewtab.ui
+++ b/src/codeviewtab.ui
@@ -21,7 +21,14 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QComboBox" name="comboBox_funcList"/>
+    <widget class="QComboBox" name="comboBox_funcList">
+     <property name="minimumSize">
+      <size>
+       <width>20</width>
+       <height>0</height>
+      </size>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QScrollArea" name="scrollArea_codeView">
